Entrega Cartas Flexbox finalizada

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 	</style>
+	<title>Cards</title>
 </head>
 
 <body>
+	<div class="conteudo">
 	<div class="cardGroup">
 		<div class="card cardGroup__card">
 			<div class="card__description cardGroup__cardDescription">
@@ -35,6 +37,7 @@
 			<div class="card__price">$6,000.00</div>
 		</div>
 	</div>
+</div>
 </body>
 
 </html>
